# Mark-us-Down

./: .gitignore  BUILD-TROUBLESHOOTING.md  LICENSE  README.md  SIGNING.md  VERSION-UPDATE.md  build-linux.sh  build-windows.ps1  build.sh  index.html  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: PreviewPane.css  PreviewPane.tsx  SourceEditor.css  SourceEditor.tsx  SplitView.css  SplitView.tsx  index.ts
src/services/: markdownParser.ts  performanceTest.ts  scrollSync.ts
src/styles/: highlight.css
